force-app/main/default/objects/Occurence_Breakout__c/Occurence_Breakout__c.object-meta.xml
<CustomObject>
    <label>Occurrence Breakout</label>
    <nameField>
        <label>Occurrence Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Occurrence Breakouts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>