force-app/main/default/objects/Occurence_Breakout__c/fields/Budget2__c.field-meta.xml
<CustomField>
    <fullName>Budget2__c</fullName>
    <label>Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>