force-app/main/default/objects/Occurence_Breakout__c/fields/Budget_Corp_Comms__c.field-meta.xml
<CustomField>
    <fullName>Budget_Corp_Comms__c</fullName>
    <formula>Currencyrate( text(CurrencyIsoCode))*
case(month(Occurence_Date__c),
1,26700,
2,56200,
3,185319,
4,31200,
5,131200,
6,31200,
7,31316,
8,231200,
9,176369,
10,72000,
11,541200,
12,33200,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget_Corp Comms</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>