force-app/main/default/objects/Occurence_Breakout__c/fields/Budget_Creative_Services__c.field-meta.xml
<CustomField>
    <fullName>Budget_Creative_Services__c</fullName>
    <formula>Currencyrate( text(CurrencyIsoCode))*
case(month(Occurence_Date__c),
1,7000,
2,6500,
3,5000,
4,9000,
5,9000,
6,9000,
7,11500,
8,11500,
9,11500,
10,11500,
11,9000,
12,6500,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Creative Services</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>