force-app/main/default/objects/Occurence_Breakout__c/fields/Budget_CreativeContent__c.field-meta.xml
<CustomField>
    <fullName>Budget_CreativeContent__c</fullName>
    <formula>Currencyrate( text(CurrencyIsoCode))*
case(month(Occurence_Date__c),
1,40044.07,
2,40044.07,
3,52044.07,
4,29544.07,
5,29544.07,
6,41544.07,
7,24044.07,
8,24044.07,
9,36044.07,
10,24044.07,
11,24044.07,
12,36044.07,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget_CreativeContent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>