force-app/main/default/objects/Occurence_Breakout__c/fields/Budget_EMEA__c.field-meta.xml
<CustomField>
    <fullName>Budget_EMEA__c</fullName>
    <formula>Currencyrate( text(CurrencyIsoCode))*
case(month(Occurence_Date__c),
1,18183,
2,19743,
3,34743,
4,491143,
5,161143,
6,196143,
7,118643,
8,85143,
9,273143,
10,108143,
11,95143,
12,126143,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget_EMEA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>