force-app/main/default/objects/Occurence_Breakout__c/fields/Budget_Events__c.field-meta.xml
<CustomField>
    <fullName>Budget_Events__c</fullName>
    <formula>Currencyrate( text(CurrencyIsoCode))* 
case(month(Occurence_Date__c),
1,12000,
2,12000,
3,12000,
4,12000,
5,30000,
6,12000,
7,12000,
8,30000,
9,12000,
10,12000,
11,30000,
12,12000,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Events</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>