force-app/main/default/objects/Occurence_Breakout__c/fields/Budget_Flag__c.field-meta.xml
<CustomField>
    <fullName>Budget_Flag__c</fullName>
    <label>Budget Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Actual</fullName>
                <default>true</default>
                <label>Actual</label>
            </value>
            <value>
                <fullName>Budget</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>