force-app/main/default/objects/Occurence_Breakout__c/fields/Budget_for_placeholder_occurrence__c.field-meta.xml
<CustomField>
    <fullName>Budget_for_placeholder_occurrence__c</fullName>
    <formula>if( Name = &quot;Placeholder&quot;,  Budget2__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget for placeholder occurrence</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>