force-app/main/default/objects/Occurence_Breakout__c/fields/Budget_Hosted_software__c.field-meta.xml
<CustomField>
    <fullName>Budget_Hosted_software__c</fullName>
    <formula>Currencyrate( text(CurrencyIsoCode))* 
case(month(Occurence_Date__c),
1,7750,
2,7750,
3,7750,
4,12500,
5,12500,
6,12500,
7,12500,
8,12500,
9,12500,
10,12500,
11,12500,
12,12500,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Hosted software</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>