force-app/main/default/objects/Occurence_Breakout__c/fields/Budget_Marketing_Ops__c.field-meta.xml
<CustomField>
    <fullName>Budget_Marketing_Ops__c</fullName>
    <formula>Currencyrate( text(CurrencyIsoCode))*
case(month(Occurence_Date__c),
1,32268.48,
2,37268.48,
3,37685.15,
4,50027.15,
5,52527.15,
6,52527.15,
7,48193.15,
8,58193.15,
9,58194.15,
10,68444.15,
11,68444.15,
12,68478.15,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget_Marketing Ops</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>