force-app/main/default/objects/Occurence_Breakout__c/fields/Budget_Marketing_research__c.field-meta.xml
<CustomField>
    <fullName>Budget_Marketing_research__c</fullName>
    <formula>Currencyrate( text(CurrencyIsoCode))* 
case(month(Occurence_Date__c),
1,1000,
2,1000,
3,1000,
4,1000,
5,1000,
6,1000,
7,1000,
8,1000,
9,1000,
10,1000,
11,1000,
12,1000,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Marketing research</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>