force-app/main/default/objects/Occurence_Breakout__c/fields/Budget_Marketing_T_E__c.field-meta.xml
<CustomField>
    <fullName>Budget_Marketing_T_E__c</fullName>
    <formula>Currencyrate( text(CurrencyIsoCode))* 
case(month(Occurence_Date__c),
1,3000,
2,4000,
3,6000,
4,0,
5,0,
6,0,
7,0,
8,0,
9,0,
10,0,
11,0,
12,0,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Marketing T&amp;E</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>