force-app/main/default/objects/Occurence_Breakout__c/fields/Budget_Memberships_licenses__c.field-meta.xml
<CustomField>
    <fullName>Budget_Memberships_licenses__c</fullName>
    <formula>Currencyrate( text(CurrencyIsoCode))* 
case(month(Occurence_Date__c), 
1,2000,
2,2000,
3,2000,
4,8000,
5,8000,
6,8000,
7,6500,
8,6500,
9,6500,
10,6500,
11,6500,
12,6500,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Memberships &amp; licenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>