force-app/main/default/objects/Occurence_Breakout__c/fields/Budget_NA_Experiential__c.field-meta.xml
<CustomField>
    <fullName>Budget_NA_Experiential__c</fullName>
    <formula>Currencyrate( text(CurrencyIsoCode))*
case(month(Occurence_Date__c),
1,133900,
2,88000,
3,84000,
4,111000,
5,222000,
6,272000,
7,132000,
8,97000,
9,281000,
10,222000,
11,266000,
12,80000,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget_NA Experiential</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>