force-app/main/default/objects/Occurence_Breakout__c/fields/Budget_Operations__c.field-meta.xml
<CustomField>
    <fullName>Budget_Operations__c</fullName>
    <formula>Currencyrate( text(CurrencyIsoCode))* 
case(month(Occurence_Date__c), 
1,3800,
2,3500,
3,3500,
4,5000,
5,5000,
6,10000,
7,10000,
8,10000,
9,5000,
10,10000,
11,0,
12,0,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Operations</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>