force-app/main/default/objects/Occurence_Breakout__c/fields/Budget_Other_outside_services__c.field-meta.xml
<CustomField>
    <fullName>Budget_Other_outside_services__c</fullName>
    <formula>Currencyrate( text(CurrencyIsoCode))* 
case(month(Occurence_Date__c), 
1,7000,
2,7000,
3,7000,
4,7000,
5,7000,
6,7000,
7,8000,
8,8000,
9,8000,
10,8000,
11,8000,
12,7000,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Other outside services</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>