force-app/main/default/objects/Occurence_Breakout__c/fields/Budget_Paid_Media__c.field-meta.xml
<CustomField>
    <fullName>Budget_Paid_Media__c</fullName>
    <formula>Currencyrate( text(CurrencyIsoCode))* 
case(month(Occurence_Date__c), 
1,17000,
2,17000,
3,17000,
4,22000,
5,17000,
6,22000,
7,17000,
8,22000,
9,17000,
10,22000,
11,17000,
12,22000,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Paid Media</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>