force-app/main/default/objects/Occurence_Breakout__c/fields/Budget_Promo_Items__c.field-meta.xml
<CustomField>
    <fullName>Budget_Promo_Items__c</fullName>
    <formula>Currencyrate( text(CurrencyIsoCode))* 
case(month(Occurence_Date__c), 
1,4000,
2,2000,
3,2000,
4,2000,
5,2000,
6,2000,
7,2000,
8,2000,
9,2000,
10,2000,
11,2000,
12,2000,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Promo Items</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>