force-app/main/default/objects/Occurence_Breakout__c/fields/Budget_Public_relations__c.field-meta.xml
<CustomField>
    <fullName>Budget_Public_relations__c</fullName>
    <formula>Currencyrate( text(CurrencyIsoCode))* 
case(month(Occurence_Date__c), 
1,10000,
2,10000,
3,10000,
4,14000,
5,14000,
6,14000,
7,10000,
8,20000,
9,20000,
10,10000,
11,10000,
12,10000,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Public relations</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>