force-app/main/default/objects/Occurence_Breakout__c/fields/Budget_Sales_promotions__c.field-meta.xml
<CustomField>
    <fullName>Budget_Sales_promotions__c</fullName>
    <formula>Currencyrate( text(CurrencyIsoCode))* 
case(month(Occurence_Date__c), 
1,0,
2,15000,
3,0,
4,0,
5,0,
6,15000,
7,0,
8,0,
9,15000,
10,0,
11,0,
12,15000,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Sales promotions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>