force-app/main/default/objects/Occurence_Breakout__c/fields/Budget_Subscriptions__c.field-meta.xml
<CustomField>
    <fullName>Budget_Subscriptions__c</fullName>
    <formula>Currencyrate( text(CurrencyIsoCode))* 
case(month(Occurence_Date__c), 
1,375,
2,375,
3,375,
4,0,
5,0,
6,0,
7,250,
8,250,
9,250,
10,250,
11,250,
12,250,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Subscriptions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>