force-app/main/default/objects/Occurence_Breakout__c/fields/Budget_T_E_travel_meals__c.field-meta.xml
<CustomField>
    <fullName>Budget_T_E_travel_meals__c</fullName>
    <formula>case(month(Occurence_Date__c), 
1,0, 
2,0, 
3,0, 
4,0, 
5,0, 
6,0, 
7,0, 
8,0, 
9,0, 
10,0, 
11,0, 
12,0,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget T&amp;E travel meals</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>